--- a/.github/workflows/LibraryBuild.yml
+++ b/.github/workflows/LibraryBuild.yml
@@ -235,7 +235,6 @@ jobs:
 
           - arduino-boards-fqbn: esp32:esp32:featheresp32:FlashFreq=80
             platform-url: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
-#            arduino-platform: esp32:esp32@2.0.17 # latest 2.x version as of 5/2024
             sketches-exclude: TinyReceiver # undefined reference to `TwoWire::onReceive(void (*)(int))'
             build-properties: # the flags were put in compiler.cpp.extra_flags. SEND_PWM_BY_TIMER is always enabled!
               IRremoteExtensionTest: -MMD -c # see https://github.com/espressif/arduino-esp32/issues/8815
@@ -243,7 +242,6 @@ jobs:
 
           - arduino-boards-fqbn: esp32:esp32:esp32c3
             platform-url: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
-#            arduino-platform: esp32:esp32@2.0.17 # latest 2.x version as of 5/2024
             sketches-exclude: TinyReceiver # undefined reference to `TwoWire::onReceive(void (*)(int))'
             build-properties: # the flags were put in compiler.cpp.extra_flags. SEND_PWM_BY_TIMER is always enabled!
               IRremoteExtensionTest: -MMD -c # see https://github.com/espressif/arduino-esp32/issues/8815
@@ -287,7 +285,7 @@ jobs:
 
           - arduino-boards-fqbn: Seeeduino:samd:seeed_XIAO_m0:usbstack=arduino,debug=off,sercom4=include
             platform-url: https://files.seeedstudio.com/arduino/package_seeeduino_boards_index.json
-            sketches-exclude: AllProtocolsOnLCD,UnitTest,ReceiveAndSendDistanceWidth  # No print(uint64_t,.) available
+            sketches-exclude: AllProtocolsOnLCD,UnitTest,ReceiveAndSendDistanceWidth,ReceiveDemo,SimpleReceiverForHashCodes  # No print(uint64_t,.) available
             build-properties: # the flags were put in compiler.cpp.extra_flags
               All: -DRAW_BUFFER_LENGTH=750
 
